static/css/custom.css
/*
    Base & headings
 */

body,
.form-control {
  font-size: 0.8rem;
}

h1 {
  font-size: 2rem;
}

h3 {
  font-size: 1.75rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.25rem;
}

h5 {
  font-size: 1rem;
}

h6 {
  font-size: 0.8rem;
}

@media (min-width: 576px) {
  body,
  .form-control {
    font-size: 1rem;
  }

  h1 {
    font-size: 2.5rem;
  }

  h3 {
    font-size: 2rem;
  }

  h3 {
    font-size: 1.75rem;
  }

  h4 {
    font-size: 1.5rem;
  }

  h5 {
    font-size: 1.25rem;
  }

  h6 {
    font-size: 1rem;
  }
}

.about-head h1,
.trips-head h1 {
  font-family: "Varela Round";
  letter-spacing: 0.6rem;
}

/*
    Navbar
 */

#mainNav,
.dropdown-menu.show {
  font-size: 0.8rem;
}

@media (min-width: 576px) {
  #mainNav,
  .dropdown-menu.show {
    font-size: 0.95rem;
  }
}

.dropdown-menu.show {
  border: none;
}

.dropdown-item {
  color: rgba(0, 0, 0, 0.5);
}

.dropdown-item:focus,
.dropdown-item:hover {
  background: transparent;
  color: rgba(0, 0, 0, 0.7);
}

@media (min-width: 992px) {
  .dropdown-menu.show {
    background: transparent;
    margin-top: -2rem;
  }

  .dropdown-item {
    color: rgba(255, 255, 255, 0.5);
  }

  .dropdown-item:focus,
  .dropdown-item:hover {
    color: rgba(255, 255, 255, 0.75);
  }

  .dropdown-shrink.dropdown-menu.show {
    background-color: #fff;
    margin-top: 0;
  }

  .dropdown-shrink .dropdown-item {
    color: #161616;
  }
}

.breadcrumb-item + .breadcrumb-item::before {
  display: inline-block;
  padding-right: 0.5rem;
  color: #6c757d;
  content: ">";
}

ol.breadcrumb {
  font-size: 0.8rem;
}

a:focus {
  outline: none;
}

/*
    Footer
 */

input#inputEmail {
  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.3) !important;
  font-family: "Varela Round";
  font-size: 60%;
  letter-spacing: 0.15rem;
  border: 0;
}

.btn-subscribe {
  padding: 0.75rem 1.25rem;
}

.footer-icon {
  font-size: large;
}

.contact-section .social {
  margin-top: 2rem;
}

/*
    Home page
 */

.testimony-section hr,
.stat-section hr {
  border-color: #64a19d;
  border-width: 0.25rem;
  width: 5rem;
}

.book-section {
  padding: 10rem 0;
  background: linear-gradient(
      to bottom,
      rgba(22, 22, 22, 0.1) 0%,
      rgba(22, 22, 22, 0.5) 75%,
      #161616 100%
    ),
    url("../img/galaxy.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

.stat-icon {
  font-size: 3rem;
  color: white;
}

.more-testimonials {
  display: contents;
}

/*
    About page
 */

.about-head {
  padding: 10rem 0;
  background: linear-gradient(
      to bottom,
      rgba(22, 22, 22, 0.3) 0%,
      rgba(22, 22, 22, 0.7) 75%,
      #161616 100%
    ),
    url("../img/stars-sky.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

/*
    Contact page
 */

#map {
  max-width: 100%;
  height: 800px;
  background-color: grey;
}

@media (min-width: 992px) {
  #map {
    height: 100%;
  }
}

/*
    Destinations page
 */

.trips-head {
  padding: 10rem 0;
  background: linear-gradient(
      to bottom,
      rgba(22, 22, 22, 0.3) 0%,
      rgba(22, 22, 22, 0.7) 75%,
      #161616 100%
    ),
    url("../img/iss-nasa-3.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

.btn-book {
  margin-top: -6rem;
  z-index: 50;
  position: relative;
}

.class-margin-bottom {
  margin-bottom: 5rem !important;
}

@media (min-width: 576px) {
  .img-trip-destination {
    height: 400px;
    width: 100%;
    object-fit: cover;
  }
}

@media (min-width: 992px) {
  .img-trip-destination {
    height: 500px;
    width: 100%;
    object-fit: cover;
  }
}

/*
    Trip details page
 */

.trip-img-thumbnail {
  object-fit: cover;
  height: 60px;
  width: 60px;
}

img.img-fluid.img-box {
  height: 250px;
  width: 100%;
  object-fit: cover;
}

@media (min-width: 576px) {
  .trip-img-thumbnail {
    object-fit: cover;
    height: 125px;
    width: 125px;
  }

  img.img-fluid.img-box {
    height: 550px;
    width: 100%;
    object-fit: cover;
  }
}

input#datepicker {
  border-color: rgb(206, 212, 218);
  font-family: Nunito;
  padding: 0.375rem 0.75rem;
  color: #495057;
}

@media (min-width: 992px) {
  .jumbotron.jumbotron-trip {
    height: 550px;
  }
}

.jumbotron.jumbotron-trip {
  padding: 1.5rem;
}

/*
    Trips results page
 */

ul.timeline {
  list-style-type: none;
  position: relative;
}
ul.timeline:before {
  content: " ";
  background: #d4d9df;
  display: inline-block;
  position: absolute;
  left: 29px;
  width: 2px;
  height: 100%;
  z-index: 400;
}
ul.timeline > li {
  margin: 20px 0;
  padding-left: 20px;
}
ul.timeline > li:before {
  content: " ";
  background: white;
  display: inline-block;
  position: absolute;
  border-radius: 50%;
  border: 3px solid #64a19d;
  left: 20px;
  width: 20px;
  height: 20px;
  z-index: 400;
}

.spacex-book {
  width: 80px;
  height: auto;
}

.img-display {
  display: none;
}

@media (min-width: 768px) {
  .img-display {
    display: inline;
  }
}

/*
    All trips page
 */

@media (min-width: 992px) {
  nav.navbar.navbar-light.bg-white.shadow-sm.pt-5 {
    font-size: 85%;
  }

  button.btn.btn-primary.btn-subscribe {
    margin-top: 1.7rem;
  }
}

.input-group.text-left.text-md-right.mb-3 {
  display: block;
}

/*
    FAQs page
 */

#faq .btn-link {
  color: #161616;
  box-shadow: 0 0 !important;
}

#faq .btn-link:hover,
#faq .btn-link:focus {
  color: #64a19d;
  text-decoration: none;
}

#faq h2 {
  font-size: 1rem;
}

/*
    Cart page
 */

.badge-info {
  background-color: #64a19d;
}

.badge {
  padding: 0.25rem 0.5rem;
  border-radius: 1rem;
  -webkit-border-radius: 1rem;
  -moz-border-radius: 1rem;
}

.remove-item {
  padding: 1rem 1.25rem;
  border-radius: 1.5rem;
  -webkit-border-radius: 1.5rem;
  -moz-border-radius: 1.5rem;
}

/*
    Profile page
 */

.accounts-head {
  padding: 10rem 0;
  background: linear-gradient(
      to bottom,
      rgba(22, 22, 22, 0.3) 0%,
      rgba(22, 22, 22, 0.7) 75%,
      #161616 100%
    ),
    url("../img/stars-sky.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}

/*
    Bookings page
*/

.booking-ref-class {
  color: #64a19d;
  font-weight: 600;
}

/*
    Checkout pages
 */

.btn {
  font-size: 70%;
}

.collapse-container .content {
  display: none;
}

.card-header.header {
  background-color: #64a19d;
  color: white;
}

/*
    Progress bar for checkout
    <--------------- Code credit: https://codepen.io/cavellblood/pen/NNNbbg
 */

.c-progress-steps {
  margin: 0;
  list-style-type: none;
}
.c-progress-steps li {
  position: relative;
  font-size: 14px;
  color: #7f8c8d;
  padding: 2px 0 2px 23px;
}
.c-progress-steps li a {
  color: inherit;
}
.c-progress-steps li.done {
  color: #64a19d;
}
.c-progress-steps li.done:before {
  color: #64a19d;
  content: "\f058";
}
.c-progress-steps li.current {
  color: #161616;
  font-weight: bold;
}
.c-progress-steps li.current:before {
  color: #161616;
  content: "\f192";
}
.c-progress-steps li:before {
  position: absolute;
  left: 0;
  font: normal normal normal 14px/1 "Font Awesome 5 Free";
  font-size: 22px;
  background-color: #f8f9fa;
  content: "\f111";
}
@media all and (max-width: 600px) {
  .c-progress-steps li:before {
    top: calc(50% - 8px);
    font-size: 16px;
  }
}
@media all and (min-width: 600px) {
  .c-progress-steps {
    display: table;
    list-style-type: none;
    margin: 20px auto;
    padding: 0;
    table-layout: fixed;
    width: 100%;
  }
  .c-progress-steps li {
    display: table-cell;
    text-align: center;
    padding: 0;
    padding-bottom: 10px;
    white-space: nowrap;
    position: relative;
    border-left-width: 0;
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: #7f8c8d;
  }
  .c-progress-steps li.done {
    border-bottom-color: #64a19d;
  }
  .c-progress-steps li.current {
    color: #161616;
    font-size: 16px;
    line-height: 14px;
    border-bottom-color: #161616;
  }
  .c-progress-steps li.current:before {
    color: #161616;
    content: "\f192";
  }
  .c-progress-steps li:before {
    bottom: -14px;
    left: 50%;
    margin-left: -9px;
  }
}

/*
    <--------------- End of code credit
*/

